--- a/MilleniumIOS/Main.storyboard
+++ b/MilleniumIOS/Main.storyboard
@@ -41,9 +41,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QSu-fD-aM5">
                                 <rect key="frame" x="16" y="203" width="382" height="478"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="QSu-fD-aM5" secondAttribute="height" multiplier="382:483" id="vfE-SY-oNM"/>
-                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="67" id="jEf-mn-iOM">
                                         <rect key="frame" x="0.0" y="28" width="382" height="67"/>
@@ -64,13 +61,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="QSu-fD-aM5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="5u2-as-Fku"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QSu-fD-aM5" secondAttribute="bottom" constant="132" id="BPM-EL-zfS"/>
+                            <constraint firstItem="QSu-fD-aM5" firstAttribute="top" secondItem="Zlp-bJ-BbE" secondAttribute="bottom" constant="8" id="1gF-mY-Gij"/>
+                            <constraint firstItem="QSu-fD-aM5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="2tU-h7-57O"/>
                             <constraint firstItem="Zlp-bJ-BbE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="37" id="LKV-N9-dey"/>
                             <constraint firstItem="Zlp-bJ-BbE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="WgT-v2-4ME"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QSu-fD-aM5" secondAttribute="trailing" constant="16" id="cph-jV-Cxw"/>
-                            <constraint firstItem="QSu-fD-aM5" firstAttribute="top" secondItem="Zlp-bJ-BbE" secondAttribute="bottom" constant="8" id="eR6-Bo-UJd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QSu-fD-aM5" secondAttribute="bottom" constant="132" id="fNE-4e-scr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Zlp-bJ-BbE" secondAttribute="trailing" constant="37" id="gSU-Bb-nTD"/>
+                            <constraint firstItem="QSu-fD-aM5" firstAttribute="centerX" secondItem="Zlp-bJ-BbE" secondAttribute="centerX" id="jM2-fY-3xH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -456,18 +453,18 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uzL-4n-bL3">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uzL-4n-bL3">
                                             <rect key="frame" x="20" y="11" width="67" height="66"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="67" id="laM-98-muv"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Song Artist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKP-LT-735" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Artist" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKP-LT-735" customClass="SpringLabel" customModule="MilleniumIOS" customModuleProvider="target">
                                             <rect key="frame" x="106" y="11" width="288" height="66"/>
                                             <accessibility key="accessibilityConfiguration" identifier="artist"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="bKP-LT-735" secondAttribute="height" multiplier="288:37" id="hFh-53-KVp"/>
-                                                <constraint firstAttribute="height" constant="37" id="yiY-A5-9rL"/>
+                                                <constraint firstAttribute="width" secondItem="bKP-LT-735" secondAttribute="height" multiplier="288:37" constant="-225.7297297297298" id="hFh-53-KVp"/>
+                                                <constraint firstAttribute="height" constant="66" id="yiY-A5-9rL"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -479,6 +476,7 @@
                                         <constraint firstItem="uzL-4n-bL3" firstAttribute="leading" secondItem="ooJ-tS-KEF" secondAttribute="leadingMargin" id="5YN-e5-CG6"/>
                                         <constraint firstItem="bKP-LT-735" firstAttribute="top" secondItem="ooJ-tS-KEF" secondAttribute="topMargin" id="dDo-qr-bUn"/>
                                         <constraint firstItem="bKP-LT-735" firstAttribute="leading" secondItem="uzL-4n-bL3" secondAttribute="trailing" constant="19" id="lzz-zC-IsD"/>
+                                        <constraint firstItem="uzL-4n-bL3" firstAttribute="bottom" secondItem="bKP-LT-735" secondAttribute="bottom" id="uew-H9-M4D"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <accessibility key="accessibilityConfiguration" identifier="cell"/>
